[tool.poetry]
name = "luba-api"
version = "0.1.0"
description = ""
authors = ["Andrea Cagnola"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pymammotion = "0.2.22"
flask = {version = "3.0.3", extras = ["async"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
